<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_auth">Authentication</string>
    <string name="title_activity_upcoming_events">Upcoming shared events</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect more sources</string>
    <string name="action_log_out">Log Out</string>
    <string name="title_upcoming_meetings">Upcoming Meetings</string>
    <string name="title_activity_context">Context</string>
    <string name="action_improve_context">Improve Context</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="action_prepare_on_wear">Prepare on Wear</string>
    <string name="single_attendee">1 Attendee</string>
    <string name="multiple_attendees">%d Attendees</string>
    <string name="minutes_before">In %d\'</string>
    <string name="event_s_attendee">Event\'s Attendee</string>
    <string name="title_activity_full">View Document</string>
    <string name="action_important_document">Mark as Important</string>
    <string name="action_open_in_app">Open in App</string>
    <string name="choose_context_attendees">Context\'s attendees</string>
    <string name="tab_all">All</string>
    <string name="placeholder_document_type">Document Type</string>
    <string name="placeholder_provider">Provider</string>
    <string name="placeholder_event">Event</string>
    <string name="placeholder_time_range">From - To</string>
    <string name="placeholder_event_title">Event title</string>
    <string name="placeholder_attendees">0 Attendees</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_attendee_name">Attendee</string>
    <string name="placeholder_header_image">Header Image</string>
    <string name="sent_to_watch">Sent to watch</string>
    <string name="auth_issue">Authentication issue :(</string>
    <string name="auth_issue_action">Sign in</string>
    <string name="calendar_error">Error retrieving calendar, please restart companion…</string>
    <string name="server_error">There\'s an issue with the server, please retry or log out and log in again.</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="january">JAN</string>
    <string name="february">FEB</string>
    <string name="march">MAR</string>
    <string name="april">APR</string>
    <string name="may">MAY</string>
    <string name="june">JUN</string>
    <string name="july">JUL</string>
    <string name="august">AUG</string>
    <string name="september">SEP</string>
    <string name="october">OCT</string>
    <string name="november">NOV</string>
    <string name="december">DEC</string>
    <string name="placeholder_day_number">10</string>
    <string name="placeholder_day_of_the_week">WED</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_notification">Notifications settings</string>
    <string name="pref_notification_events">Notify me before events</string>
    <string name="pref_notification_events_details">Display AnyFetch context before events</string>
    <string name="pref_notification_calls">Notify me during phone calls</string>
    <string name="pref_notification_calls_details">Display AnyFetch context during phone calls</string>
    <string name="notification_basic_description">Touch to view context.</string>
    <string name="context_has_match">Documents available for this context.</string>
    <string name="no_upcoming_shared_events">No upcoming shared events\n:(</string>
    <string name="context_has_no_match">No document for this context.</string>
    <string name="context_has_no_match_action">Add source</string>
    <string name="context_loading">Loading context... please be patient.</string>
    <string name="pref_dismiss_notification_summary">Time before automatically dismissing unused call notification</string>
    <string name="pref_dismiss_notification">Automatic notification removal</string>
    <string name="title_activity_onboarding">Welcome to AnyFetch Companion!</string>
    <string name="onboarding_step_1"><b>Anyfetch Companion</b> notifies you at crucial contact points – during calls and before meetings</string>
    <string name="onboarding_step_2">Contexts gather your entire contact\'s history and information</string>
    <string name="onboarding_step_3">Contexts are also on your wear.\nUseful on a call!</string>
    <string name="auth_leaving_to_external_link">Opening in default browser, hope to see you back soon!</string>
    <string name="title_activity_home">AnyFetch Companion</string>
    <string name="home_welcome_title">Pick a contact</string>
    <string name="home_welcome_subtitle">or wait until you get a phone call!</string>
    <string name="action_pick_contact">Pick contact</string>
    <string name="action_pick_event">Pick event</string>
    <string name="loading">Loading...</string>
    <string name="no_providers_yet">You don\'t have any providers yet!</string>
    <string name="no_providers_yet_action">Add one</string>
    <string name="few_providers_yet">Add more providers to improve your Companion experience</string>
    <string name="opening_manager">Opening the manager</string>
    <string name="opening_manager_description">Your default browser will appear.\nConnect your accounts and come back to the app!</string>

    <!-- Search Menu item -->
    <string name="search_contact">Search a contact</string>
    <string name="search_contact_hint">@string/search_contact</string>

    <!-- Home Activity -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!-- Fragment Contact Picker -->
    <string name="none_contact">No contact found</string>
</resources>
