<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.anyfetch.companion.UpcomingEventsActivity">

    <item
        android:id="@+id/action_pick_contact"
        android:title="@string/action_pick_contact"
        android:icon="@drawable/ic_contact"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_pick_event"
        android:title="@string/action_pick_event"
        android:icon="@drawable/ic_event"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/action_connect"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/action_log_out"
        app:showAsAction="never"/>
</menu>
